methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:1: error: ':' expected but ')' found.
def growFlowers(?){
                 ^FlowerCase:40: error: identifier expected but '}' found.
}
^